fixed spacing issue with the bar and bottom of page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
 .content-wrapper {
   position: absolute;
   top: 70%;
-  left: 1.5%;
+  left: 1.53%;
 }
 
 .gig-cards-container {
@@ -38,7 +38,7 @@
 footer {
   background-color: #343a40;
   color: white;
-  padding: 10px;
+  padding: 0px;
   text-align: center;
   flex-shrink: 0; 
 }
@@ -61,4 +61,5 @@ html, body {
 
 .content {
   flex: 1; /* Take up remaining space */
+  padding-bottom: 60px;
 }
